@@ -7,14 +7,16 @@ import java.net.*;
 
 /**
  * A set functions designed to deal with DNS names used in reverse mappings.
- * For an IP address a.b.c.d, the reverse map name is d.c.b.a.in-addr.arpa.
+ * For the IPv4 address a.b.c.d, the reverse map name is d.c.b.a.in-addr.arpa.
+ * For the IPv6 address, the reverse map name is ...
  *
  * @author Brian Wellington
  */
 
 public final class ReverseMap {
 
-private static Name inaddr = Name.fromConstantString("in-addr.arpa.");
+private static Name inaddr4 = Name.fromConstantString("in-addr.arpa.");
+private static Name inaddr6 = Name.fromConstantString("ip6.arpa.");
 
 /* Otherwise the class could be instantiated */
 private
@@ -22,27 +24,45 @@ ReverseMap() {}
 
 /**
  * Creates a reverse map name corresponding to an address contained in
- * an array of 4 integers.
+ * an array of 4 integers between 0 and 255 (for an IPv4 address) or 16
+ * integers between 0 and 255 (for an IPv6 address).
  * @param addr The address from which to build a name.
  * @return The name corresponding to the address in the reverse map.
  */
 public static Name
 fromAddress(int [] addr) {
-	if (addr.length != 4)
+	if (addr.length != 4 && addr.length != 16)
 		throw new IllegalArgumentException("array must contain " +
-						   "4 elements");
-	StringBuffer sb = new StringBuffer();
-	for (int i = 3; i >= 0; i--) {
+						   "4 or 16 elements");
+	for (int i = 0; i < addr.length; i++) {
 		if (addr[i] < 0 || addr[i] > 0xFF)
 			throw new IllegalArgumentException("array must " +
 							   "contain values " +
 							   "between 0 and 255");
-		sb.append(addr[i]);
-		if (i > 0)
-			sb.append(".");
 	}
+
+	StringBuffer sb = new StringBuffer();
+	if (addr.length == 4) {
+		for (int i = addr.length - 1; i >= 0; i--) {
+			sb.append(addr[i]);
+			if (i > 0)
+				sb.append(".");
+		}
+	} else {
+		int [] nibbles = new int[2];
+		for (int i = addr.length - 1; i >= 0; i--) {
+			nibbles[0] = addr[i] >> 4;
+			nibbles[1] = addr[i] &= 0xF;
+			for (int j = nibbles.length - 1; j >= 0; j--) {
+				sb.append(nibbles[j]);
+				if (i > 0 || j > 0)
+					sb.append(".");
+			}
+		}
+	}
+
 	try {
-		return Name.fromString(sb.toString(), inaddr);
+		return Name.fromString(sb.toString(), inaddr4);
 	}
 	catch (TextParseException e) {
 		throw new IllegalStateException("name cannot be invalid");
@@ -58,8 +78,8 @@ fromAddress(int [] addr) {
 public static Name
 fromAddress(InetAddress addr) {
 	byte [] bytes = addr.getAddress();
-	int [] array = new int[4];
-	for (int i = 0; i < 4; i ++) {
+	int [] array = new int[bytes.length];
+	for (int i = 0; i < bytes.length; i++) {
 		array[i] = bytes[i] & 0xFF;
 	}
 	return fromAddress(array);
